// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Detail Components render properly BeerDetails component renders 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "paddingTop": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-around",
        "paddingBottom": 5,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "",
        }
      }
      style={
        Object {
          "height": 200,
          "width": 150,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "justifyContent": "center",
          "margin": 10,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#61170E",
            "borderRadius": 25,
            "flex": 0.2,
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
            "opacity": 1,
            "padding": 5,
            "width": "75%",
          }
        }
      >
        <Text />
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#61170E",
            "borderRadius": 25,
            "flex": 0.2,
            "justifyContent": "center",
            "marginBottom": 10,
            "marginTop": 10,
            "opacity": 1,
            "padding": 5,
            "width": "75%",
          }
        }
      >
        <View>
          <Text />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0.5,
        "justifyContent": "center",
        "margin": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "flex": 1,
          "fontWeight": "bold",
          "justifyContent": "center",
          "textAlign": "center",
        }
      }
    >
      's 
    </Text>
    <Text>
      Style: 
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "justifyContent": "center",
          "margin": 10,
        }
      }
    >
      <Text>
        ABV: 
      </Text>
      <Text>
        IBU: 
      </Text>
    </View>
    <Text />
  </View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingBottom": 20,
          "paddingLeft": 60,
          "paddingRight": 60,
          "paddingTop": 20,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "lightgrey",
            "borderRadius": 25,
            "flex": 0.2,
            "justifyContent": "center",
            "opacity": 0.8,
            "padding": 10,
          }
        }
      >
        <Text />
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "lightgrey",
            "borderRadius": 25,
            "flex": 0.2,
            "justifyContent": "center",
            "opacity": 0.8,
            "padding": 10,
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
</View>
`;

exports[`Detail Components render properly BreweryDetails component renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "padding": 15,
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "margin": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    />
    <Text />
    <Text>
      , 
    </Text>
    <Text />
  </View>
  <Text
    style={
      Object {
        "marginTop": 15,
      }
    }
  >
    
  </Text>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#61170E",
        "borderRadius": 25,
        "flex": 0.2,
        "justifyContent": "center",
        "marginBottom": 10,
        "marginTop": 10,
        "opacity": 1,
        "padding": 5,
        "width": "75%",
      }
    }
  >
    <Text />
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#61170E",
        "borderRadius": 25,
        "flex": 0.2,
        "justifyContent": "center",
        "marginBottom": 10,
        "marginTop": 10,
        "opacity": 1,
        "padding": 5,
        "width": "75%",
      }
    }
  >
    <Text />
  </View>
</View>
`;

exports[`Detail Components render properly EventDetails component renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "padding": 15,
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "margin": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    />
    <Text />
    <Text>
      , 
    </Text>
    <Text />
  </View>
  <Text
    style={
      Object {
        "marginTop": 15,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Detail Components render properly StoreDetails component renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "padding": 15,
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "margin": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    />
    <Text />
    <Text>
      , 
    </Text>
    <Text />
  </View>
  <Text>
    
  </Text>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#61170E",
        "borderRadius": 25,
        "flex": 0.2,
        "justifyContent": "center",
        "marginBottom": 10,
        "marginTop": 10,
        "opacity": 1,
        "padding": 5,
        "width": "75%",
      }
    }
  >
    <Text />
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#61170E",
        "borderRadius": 25,
        "flex": 0.2,
        "justifyContent": "center",
        "marginBottom": 10,
        "marginTop": 10,
        "opacity": 1,
        "padding": 5,
        "width": "75%",
      }
    }
  >
    <Text />
  </View>
</View>
`;
